<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="night_theme">Темная тема</string>
    <string name="share_contact">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="my_email">pavlid99@gmail.com</string>
    <string name="legal_link">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="course_link">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="default_value">default</string>
    <string name="default_time">0:00</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="refresh">Обновить</string>
    <string name="network_error_text">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_searched_for">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="collection">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="your_media_is_empty">Ваша медиатека пуста</string>
    <string name="no_playlists_created">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="default_num">123</string>
    <string name="tracks">треки</string>
    <string name="new_playlist_snackbar_text">"Плейлист %1$s успешно создан"</string>
    <string name="edited_playlist_snackbar_text">"Плейлист %1$s успешно изменён"</string>
    <string name="abort_playlist_creation_question">"Завершить создание плейлиста?"</string>
    <string name="abort_playlist_creation_message">"Все несохранённые данные будут потеряны"</string>
    <string name="end">"Завершить"</string>
    <string name="cancel">"Отмена"</string>
    <string name="yes">"Да"</string>
    <string name="no">"Нет"</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="new_track_in_playlist_snackbar_text">"Добавлено в плейлист %1$s"</string>
    <string name="track_exists_in_playlist_snackbar_text">"Трек уже добавлен в плейлист %1$s"</string>
    <string name="no_permission_text">"Необходим доступ к галерее для выбора обложки"</string>
    <string name="delete_track_confirmation">"Хотите удалить трек?"</string>
    <string name="delete_playlist_confirmation">"Хотите удалить плейлист "%1$s"?"</string>
    <string name="no_tracks_in_playlist">В плейлисте нет треков</string>
    <string name="unable_to_share">В этом плейлисте нет списка треков,\nкоторым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="save_playlist">Сохранить</string>
    <string name="edit_playlist">Редактировать</string>

    <plurals name="tracks_count">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="duration">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="two">%d минуты</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>