<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="?attr/genericScreenBackground"
    android:orientation="vertical"
    android:theme="@style/SettingsScreenStyle"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:textAppearance="@style/TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="@dimen/title_size"
        android:layout_margin="@dimen/medium_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/night_theme"
            android:textSize="@dimen/regular_size"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginVertical="@dimen/vertical_settings_margin"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/dark_theme_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:thumbTint="@color/switch_thumb_color"
            app:trackTint="@color/switch_track_color"
            android:layout_marginEnd="6dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/share_app_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/share_contact"
        app:icon="@drawable/ic_share"
        app:iconGravity="end"
        app:iconPadding="@dimen/icons_end_margin"
        app:iconTint="?attr/iconColor"/>

    <Button
        android:id="@+id/contact_support_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/contact_support"
        app:icon="@drawable/ic_support"
        app:iconGravity="end"
        app:iconPadding="@dimen/icons_end_margin"
        app:iconTint="?attr/iconColor"/>

    <Button
        android:id="@+id/user_agreement_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/user_agreement"
        app:icon="@drawable/ic_arrow"
        app:iconGravity="end"
        app:iconPadding="@dimen/icons_end_margin"
        app:iconTint="?attr/iconColor"/>

</LinearLayout>