<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/title_margin"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginBottom="@dimen/title_margin"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"/>
    </FrameLayout>

    <Button
        android:id="@+id/search_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        app:icon="@drawable/ic_search"
        app:iconTint="@color/dark_blue"
        app:iconGravity="textStart"
        android:text="@string/search"
        android:textSize="@dimen/title_size"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/corner_radius"
        android:insetTop="@dimen/default_inset"
        android:insetBottom="@dimen/default_inset"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginHorizontal="@dimen/small_margin"/>

    <Button
        android:id="@+id/media_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        app:icon="@drawable/ic_media"
        app:iconTint="@color/dark_blue"
        app:iconGravity="textStart"
        android:text="@string/media"
        android:textSize="@dimen/title_size"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/corner_radius"
        android:insetTop="@dimen/default_inset"
        android:insetBottom="@dimen/default_inset"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginHorizontal="@dimen/small_margin"/>

    <Button
        android:id="@+id/settings_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        app:icon="@drawable/ic_settings"
        app:iconTint="@color/dark_blue"
        app:iconGravity="textStart"
        android:text="@string/settings"
        android:textSize="@dimen/title_size"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/corner_radius"
        android:insetTop="@dimen/default_inset"
        android:insetBottom="@dimen/default_inset"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="@dimen/small_margin"
        android:layout_marginBottom="28dp"/>

</LinearLayout>