<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/tiny_margin"
    android:layout_marginBottom="@dimen/medium_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/image_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/playlist_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@drawable/ic_placeholder"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/playlist_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/new_playlist"
            android:textColor="?attr/genericTextColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_layout" />

        <TextView
            android:id="@+id/playlist_track_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_num"
            android:textColor="?attr/genericTextColor"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playlist_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tiny_margin"
            android:text="@string/tracks"
            android:textColor="?attr/genericTextColor"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/playlist_track_count"
            app:layout_constraintTop_toBottomOf="@id/playlist_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>