<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/genericScreenBackground"
    tools:context=".ui.media.fragments.AddPlaylistFragment">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/genericTextColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:text="@string/new_playlist"
        app:layout_constraintStart_toEndOf="@id/back_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="56dp" />

    <ImageView
        android:id="@+id/playlist_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginTop="@dimen/standart_player_margin"
        android:layout_marginHorizontal="@dimen/standart_player_margin"
        android:background="@drawable/add_playlist_cover_background"
        android:scaleType="centerCrop"
        android:adjustViewBounds="false"
        android:cropToPadding="true"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <ImageView
        android:id="@+id/playlist_cover_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/add_image"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="@+id/playlist_cover"
        app:layout_constraintEnd_toEndOf="@+id/playlist_cover"
        app:layout_constraintStart_toStartOf="@+id/playlist_cover"
        app:layout_constraintTop_toTopOf="@+id/playlist_cover" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleInputLayout"
        style="@style/AppTextInputLayout.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:hint="@string/playlist_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playlist_cover">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_name_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionInputLayout"
        style="@style/AppTextInputLayout.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_description_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_playlist_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_margin"
        android:layout_marginHorizontal="@dimen/medium_margin"
        style="@style/SmallCornerButton"
        android:text="@string/create"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>