<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/genericScreenBackground"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/default_padding">

        <ImageView
            android:id="@+id/back_search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            app:tint="?attr/genericTextColor"
            android:padding="@dimen/icons_end_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginStart="@dimen/icons_end_margin"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corners"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginVertical="@dimen/small_margin">

        <ImageView
            android:layout_width="@dimen/small_icon"
            android:layout_height="@dimen/small_icon"
            android:src="@drawable/ic_search"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            app:tint="?attr/searchHintColor" />

        <EditText
            android:id="@+id/search_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:maxLength="20"
            android:hint="@string/search" />

        <ImageView
            android:id="@+id/clear_text_btn"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_cancel"
            android:layout_gravity="center_vertical"
            android:paddingHorizontal="12dp"
            app:tint="?attr/searchHintColor"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/search_placeholder_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:gravity="center"
            android:layout_marginTop="102dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/search_placeholder"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/empty_search_placeholder"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/nothing_found"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/no_internet_placeholder_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:gravity="center"
            android:layout_marginTop="102dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/no_internet_placeholder"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/no_internet_placeholder"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/network_error_text"/>

            <Button
                android:id="@+id/retry_search_button"
                android:layout_width="98dp"
                android:layout_height="36dp"
                android:textSize="14sp"
                android:layout_marginTop="@dimen/medium_margin"
                app:cornerRadius="54dp"
                android:textColor="?attr/genericScreenBackground"
                android:backgroundTint="?attr/genericTextColor"
                android:text="@string/refresh"/>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recycler"
            android:theme="@style/SearchRecyclerStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/medium_margin"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            tools:listitem="@layout/item_search"/>

    </FrameLayout>


</LinearLayout>