<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/PlayerScreenStyle"
    android:background="?attr/genericScreenBackground"
    tools:context=".AudioPlayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="56dp" />

        <ImageView
            android:id="@+id/back_player_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/genericTextColor" />

        <ImageView
            android:id="@+id/player_song_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/standart_player_margin"
            android:layout_marginTop="26dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_placeholder"
            app:layout_constraintDimensionRatio="h, 1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:textAppearance="@style/MainTextView"
            android:id="@+id/player_song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_value"
            android:textSize="@dimen/title_size"
            android:layout_margin="@dimen/standart_player_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_song_image" />

        <TextView
            android:textAppearance="@style/MainTextView"
            android:id="@+id/player_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/standart_player_margin"
            android:layout_marginTop="12dp"
            android:text="@string/default_value"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_song_title" />

        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_play_button_bg"
            android:src="@drawable/ic_play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_artist" />

        <ImageButton
            android:id="@+id/add_to_playlist_button"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:background="@drawable/ic_small_button_bg"
            android:src="@drawable/ic_add_to_playlist"
            android:layout_marginStart="@dimen/standart_player_margin"
            app:layout_constraintBottom_toBottomOf="@+id/play_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/play_button" />

        <ImageButton
            android:id="@+id/add_to_favorites_button"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:background="@drawable/ic_small_button_bg"
            android:src="@drawable/ic_favorites"
            android:layout_marginEnd="@dimen/standart_player_margin"
            app:layout_constraintBottom_toBottomOf="@+id/play_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/play_button" />

        <TextView
            android:textAppearance="@style/MainTextView"
            android:id="@+id/current_track_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_time"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/play_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:textAppearance="@style/RegularTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textSize="13sp"
            android:paddingTop="9dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="@dimen/medium_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/play_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>